samples/_failures_safe/1761196102_cf8cdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_502b5baf.c: In function ‘parser_init’:
./samples/SAFE/__tmp_502b5baf.c:150:5: error: expected declaration or statement at end of input
  150 |     parser->lexer = lexer;
      |     ^~~~~~
